--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,7 +4,7 @@
 </div>
 <footer class="footer">
 	<div class="container" style="text-align: center;margin-top:10px;color:lightseagreen;">
-		<p>@SpringBoot极简教程</p>
+		<p>欢迎使用个人小工具</p>
 	</div>
 </footer>
 
