--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="/favicon.ico">
-<title>FEMON</title>
+<title>excel数据加工</title>
 
 
 <!-- Bootstrap core CSS -->
@@ -16,6 +16,8 @@
 <link href="/css/flat-ui.css" rel="stylesheet">
 <!-- Custom styles for this template -->
 <link href="/css/main.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/css/fileinput.css"/>
+<link rel="stylesheet" type="text/css" href="/css/dataTables.bootstrap.css"/>
 <script src="/js/ie-emulation-modes-warning.js"></script>
 
 <script src="/js/jquery.min.js"></script>
@@ -34,7 +36,9 @@
 <script src="/js/jquery.placeholder.min.js"></script>
 <script src="/js/jquery.tagsinput.js"></script>
 <script src="/js/video.js"></script>
-
+<script type="text/javascript" src="js/fileinput.js"></script>
+<script type="text/javascript" src="js/locales/zh.js"></script>
+<script type="text/javascript" src="js/jquery.dataTables.js"></script>
 
 </head>
 <body>
@@ -45,23 +49,30 @@
 					data-target=".nav-collapse"></button>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li id="femon-home"><a href="/index"> 首页 </a></li>
-						<li id="femon-service"><a href="/service"> 服务 <!--  <span class="navbar-unread">100</span> -->
-						</a>
+						<li id="femon-home"><a href="/"> 首页 </a></li>
+						<li id="femon-service">
+                            <!--<a href="/service"> 数据初始化-->
+                                <!--&lt;!&ndash;  <span class="navbar-unread">100</span> &ndash;&gt;-->
+						    <!--</a>-->
+							<a href="#"> 数据处理
+								<!--  <span class="navbar-unread">100</span> -->
+							</a>
 							<ul>
-								<li><a href="#">模块1</a></li>
-								<li><a href="#">模块2</a>
-									<ul>
-										<li><a href="#">功能A</a></li>
-										<li><a href="#">功能B</a></li>
-										<li><a href="#">功能C</a></li>
-									</ul> <!-- /Sub menu --></li>
+								<li><a href="/preImportExcel">数据导入</a></li>
+								<li><a href="/preUserInfos">数据查询</a>
+									<!--<ul>-->
+										<!--<li><a href="#">功能A</a></li>-->
+										<!--<li><a href="#">功能B</a></li>-->
+										<!--<li><a href="#">功能C</a></li>-->
+									<!--</ul> &lt;!&ndash; /Sub menu &ndash;&gt;-->
+								</li>
 								<li><a href="#">模块3</a></li>
-							</ul> <!-- /Sub menu --></li>
+							</ul> <!-- /Sub menu -->
+                        </li>
 
-						<li id="femon-process"><a href="/process">进程</a></li>
-						<li id="femon-resource"><a href="/resource">资源</a></li>
-						<li id="femon-about"><a href="/about"> 关于FEMON </a></li>
+						<!--<li id="femon-process"><a href="/process">进程</a></li>-->
+						<!--<li id="femon-resource"><a href="/resource">资源</a></li>-->
+						<!--<li id="femon-about"><a href="/about"> 关于FEMON </a></li>-->
 					</ul>
 				</div>
 				<!--/.nav-collapse -->
