--- a/src/main/resources/templates/userInfos.html
+++ b/src/main/resources/templates/userInfos.html
@@ -1,6 +1,4 @@
 #include("header.html")
-<!--#set($layout =  "layout.vm" )-->
-<!--#set($sub=  "sidebar.vm"  )-->
 <!-- page content -->
 <div class="right_col" role="main">
     <div class="x_panel">
@@ -38,58 +36,69 @@
     </div>
 
     <div class="x_panel">
-        <!--<div class="x_title">-->
-            <!--<h2>查询结果</h2>-->
-            <!--<div class="clearfix"></div>-->
-        <!--</div>-->
         <div class="x_content">
 
             <table id="table" class="table table-striped table-bordered">
-                <!--<thead>-->
-                <!--<tr>-->
-                    <!--<th width="50">序号</th>-->
-                    <!--<th width="80">姓名</th>-->
-                    <!--<th width="150">身份证号</th>-->
-                    <!--<th width="200">状态</th>-->
-                    <!--<th width="200">录入时间</th>-->
-                    <!--&lt;!&ndash;<th width="80">详情</th>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th width="120" colspan="2">数据统计</th>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th width="80">操作</th>&ndash;&gt;-->
-                <!--</tr>-->
-                <!--</thead>-->
-                <!--<tbody>-->
-                <!--#set($count = 0)-->
-                <!--#foreach ($c in $serviceList)-->
-                <!--#set($count = $!count + 1)-->
-                <!--&lt;!&ndash;#set($output = $c.expect)&ndash;&gt;-->
-                <!--<tr>-->
-                    <!--<td>$count</td>-->
-                    <!--&lt;!&ndash;#if($c.state==1)&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td><p class="btn btn-success">正常</p></td> #else&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td><p class="btn btn-danger">失败</p></td> #end&ndash;&gt;-->
-                    <!--<td>$!c.name</td>-->
-                    <!--<td>$!c.idNum</td>-->
-                    <!--<td>$!c.status</td>-->
-                    <!--<td>$!c.createTime</td>-->
-                    <!--&lt;!&ndash;#if ( $output.length() < 20 )&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td>$output</td> #else #set($outputMin = $output.substring(0, 20))&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td>$outputMin...</td> #end&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td><a href="/service/detail?serviceId=$c.id"&ndash;&gt;-->
-                           <!--&lt;!&ndash;class="btn btn-primary">查看</a></td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td><a href="/serviceHistoryChart/$c.id">监控</a></td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td><a href="/service/data?serviceId=$c.id">统计</a></td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td><a href="/service/editPage?serviceId=$c.id">编辑</a></td>&ndash;&gt;-->
-                <!--</tr>-->
-                <!--<div id="output-content$c.id" style="display: none;"></div>-->
-                <!--#end-->
-                <!--</tbody>-->
             </table>
         </div>
     </div>
+
 </div>
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myApiModalLabel">新增API</h4>
+            </div>
+            <div class="modal-body">
+                <form id="modalForm" data-parsley-validate class="form-horizontal form-label-left">
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="nameadd">姓名 <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="nameadd" required="required" class="form-control col-md-7 col-xs-12">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="idNumadd">身份证号 <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="idNumadd" equired="required" class="form-control col-md-7 col-xs-12">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="methodName"> <span class="required">*</span></label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="methodName" equired="required" class="form-control col-md-7 col-xs-12">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="description">API描述 <span class="required">*</span></label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="description" equired="required" class="form-control col-md-7 col-xs-12">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <input type="button" class="btn btn-default" data-dismiss="modal" value="关闭"></input>
+                <input type="button" id="save" class="btn btn-primary" value="保存"></input>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+<div class="modal fade alert alert-success" id="ss" role="dialog" aria-hidden="">成功！很好地完成了提交。</div>
+<div class="alert alert-success">成功！很好地完成了提交。</div>
+<div class="alert alert-info">信息！请注意这个信息。</div>
+<div class="alert alert-warning">警告！请不要提交。</div>
+<div class="alert alert-danger">错误！请进行一些更改。</div>
 #include("footer.html")
 <script type="text/javascript">
     $(function(){
+        // $("#apiModal").modal('show');
+        $("#ss").modal('show');
         var urlResource = {
             query : function (param) {
                 $.get("/queryUserInfos", param, function (data) {
@@ -135,6 +144,7 @@
         };
         $("#reset").click(function () {
             $("#queryForm input[type='text']").val("");
+
             initTable();
         });
 
